[project]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "deep-translator>=1.11.4",
    "feedparser>=6.0.11",
    "flask>=3.1.0",
    "googletrans>=4.0.2",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
    "tweepy>=4.15.0",
]
